# internal/handler/http/session.go
@@ -9,17 +9,15 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-// GetUserByID godoc
-// @Summary Get user by ID
-// @Description Retrieve a user by their ID
-// @Tags users
-// @Accept  json
-// @Produce  json
-// @Param id path string true "User ID"
-// @Success 200 {object} data.GetUserByIDResponse
-// @Failure 404 {string} string "User not found"
-// @Security BearerAuth
-// @Router /user/{id} [get]
+// GetSessionByID godoc
+// @Summary Get a session by ID
+// @Description Get a session by ID
+// @Tags sessions
+// @Accept json
+// @Produce json
+// @Param id path string true "Session ID"
+// @Success 200 {object} data.GetSessionByIDResponse
+// @Router /sessions/{id} [get]
 func (h *handler) GetSessionByID(c echo.Context) error {
 	ctx, cancel := h.context(c)
 	defer cancel()
@@ -36,17 +34,15 @@ func (h *handler) GetSessionByID(c echo.Context) error {
 	return c.JSON(http.StatusOK, session)
 }
 
-// GetUserByEmail godoc
-// @Summary Get user by email
-// @Description Retrieve a user by their email
-// @Tags users
-// @Accept  json
-// @Produce  json
-// @Param email path string true "User email"
-// @Success 200 {object} models.User
-// @Failure 404 {string} string "User not found"
-// @Security BearerAuth
-// @Router /user/by-email/{email} [get]
+// GetSessionByUserID godoc
+// @Summary Get a session by user ID
+// @Description Get a session by user ID
+// @Tags sessions
+// @Accept json
+// @Produce json
+// @Param uid path string true "User ID"
+// @Success 200 {object} data.GetSessionByUserIDResponse
+// @Router /sessions/{uid} [get]
 func (h *handler) GetSessionByUserID(c echo.Context) error {
 	ctx, cancel := h.context(c)
 	defer cancel()
@@ -61,6 +57,16 @@ func (h *handler) GetSessionByUserID(c echo.Context) error {
 	return c.JSON(http.StatusOK, session)
 }
 
+// GetSessionByTime godoc
+// @Summary Get a session by user ID and time
+// @Description Get a session by user ID and time
+// @Tags sessions
+// @Accept json
+// @Produce json
+// @Param uid path string true "User ID"
+// @Param time path string true "Time"
+// @Success 200 {object} data.GetSessionByUserIDResponse
+// @Router /sessions/{uid}/{time} [get]
 func (h *handler) GetSessionByTime(c echo.Context) error {
 	ctx, cancel := h.context(c)
 	defer cancel()
@@ -85,17 +91,15 @@ func (h *handler) GetSessionByTime(c echo.Context) error {
 	return c.JSON(http.StatusOK, session)
 }
 
-// CreateUser godoc
-// @Summary Create a new user
-// @Description Create a new user
-// @Tags users
-// @Accept  json
-// @Produce  json
-// @Param user body data.CreateUserRequest true "User object"
-// @Success 201 {object} data.CreateUserResponse
-// @Failure 400 {string} string "Bad request"
-// @Security BearerAuth
-// @Router /user [post]
+// CreateSession godoc
+// @Summary Create a session
+// @Description Create a session
+// @Tags sessions
+// @Accept json
+// @Produce json
+// @Param session body data.CreateSessionRequest true "Session object that needs to be created"
+// @Success 200 {object} data.CreateSessionResponse
+// @Router /sessions [post]
 func (h *handler) CreateSession(c echo.Context) error {
 	ctx, cancel := h.context(c)
 	defer cancel()
@@ -113,18 +117,16 @@ func (h *handler) CreateSession(c echo.Context) error {
 	return c.JSON(http.StatusCreated, resp)
 }
 
-// UpdateUser godoc
-// @Summary Update a user
-// @Description Update a user by their ID
-// @Tags users
-// @Accept  json
-// @Produce  json
-// @Param id path string true "User ID"
-// @Param user body data.UpdateUserRequest true "User object"
-// @Success 200 {object} data.UpdateUserResponse
-// @Failure 400 {string} string "Bad request"
-// @Security BearerAuth
-// @Router /user/{id} [put]
+// UpdateSession godoc
+// @Summary Update a session
+// @Description Update a session
+// @Tags sessions
+// @Accept json
+// @Produce json
+// @Param id path string true "Session ID"
+// @Param session body data.UpdateSessionRequest true "Session object that needs to be updated"
+// @Success 200 {object} data.UpdateSessionResponse
+// @Router /sessions/{id} [put]
 func (h *handler) UpdateSession(c echo.Context) error {
 	ctx, cancel := h.context(c)
 	defer cancel()
@@ -144,17 +146,15 @@ func (h *handler) UpdateSession(c echo.Context) error {
 	return c.JSON(http.StatusOK, resp)
 }
 
-// DeleteUser godoc
-// @Summary Delete a user
-// @Description Delete a user by their ID
-// @Tags users
-// @Accept  json
-// @Produce  json
-// @Param id path string true "User ID"
-// @Success 204 {string} string "No Content"
-// @Failure 400 {string} string "Bad request"
-// @Security BearerAuth
-// @Router /user/{id} [delete]
+// DeleteSession godoc
+// @Summary Delete a session
+// @Description Delete a session
+// @Tags sessions
+// @Accept json
+// @Produce json
+// @Param id path string true "Session ID"
+// @Success 204
+// @Router /sessions/{id} [delete]
 func (h *handler) DeleteSession(c echo.Context) error {
 	ctx, cancel := h.context(c)
 	defer cancel()
@@ -168,38 +168,3 @@ func (h *handler) DeleteSession(c echo.Context) error {
 
 	return c.JSON(http.StatusNoContent, nil)
 }
-
-// SearchUserByUsername godoc
-// @Summary Search users by username
-// @Description Search users by username
-// // @Tags users
-// // @Accept  json
-// // @Produce  json
-// // @Param username query string true "Username"
-// // @Param limit query int false "Limit"
-// // @Success 200 {object} data.SearchUsersByUsernameResponse
-// // @Failure 400 {string} string "Bad request"
-// // @Security BearerAuth
-// // @Router /user/search [get]
-// func (h *handler) SearchUserByUsername(c echo.Context) error {
-// 	ctx, cancel := h.context(c)
-// 	defer cancel()
-
-// 	req := data.SearchUsersByUsernameRequest{}
-
-// 	req.Username = c.QueryParam("username")
-// 	if limit := c.QueryParam("limit"); limit != "" {
-// 		l, err := strconv.Atoi(limit)
-// 		if err != nil {
-// 			return c.JSON(http.StatusBadRequest, err.Error())
-// 		}
-// 		req.Limit = l
-// 	}
-
-// 	resp, err := h.service.UserService.SearchUsersByUsername(ctx, req)
-// 	if err != nil {
-// 		return err
-// 	}
-
-// 	return c.JSON(http.StatusOK, resp)
-// }
