# internal/models/challenge.go
@@ -3,15 +3,21 @@ package models
 import "time"
 
 type Challenge struct {
-	ID          string    `json:"id" firestore:"id"`
-	Name        string    `json:"name" firestore:"name"`
-	StartDate   time.Time `json:"start_date" firestore:"start_date"`
-	EndDate     time.Time `json:"end_date" firestore:"end_date"`
-	Description string    `json:"description" firestore:"description"`
-	Tasks       []Task    `json:"tasks" firestore:"tasks"`
-	Prize       string    `json:"prize" firestore:"prize"`
-	Penalty     int       `json:"penalty" firestore:"penalty"`
-	IsActive    bool      `json:"is_active" firestore:"is_active"`
-
-	Users []User `json:"users" firestore:"users"`
+	ID              string    `json:"id" firestore:"-"`
+	Type            string    `json:"type" firestore:"type,omitempty"`
+	Name            string    `json:"name" firestore:"name,omitempty"`
+	Description     string    `json:"description" firestore:"description,omitempty"`
+	EndDate         time.Time `json:"end_date" firestore:"end_date,omitempty"`
+	OwnerID         string    `json:"owner_id" firestore:"owner_id,omitempty"`
+	Participants    []string  `json:"participants" firestore:"participants,omitempty"`
+	Invited         []string  `json:"invited" firestore:"invited,omitempty"`
+	Prize           string    `json:"prize" firestore:"prize,omitempty"`
+	Penalty         int       `json:"penalty" firestore:"penalty,omitempty"`
+	CigarettesLimit int       `json:"cigarettes_limit" firestore:"cigarettes_limit,omitempty"`
 }
+
+const (
+	ChallengeTypeLimitCigarettes       = "limit_cigarettes"
+	ChallengeTypeMaximizeSmokeFreeTime = "maximize_smoke_free_time"
+	ChallengeTypeTasks                 = "tasks"
+)
